acme-flex-box version2

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <p class = 'creatlabel'> Creat A User</p>
             <form id = 'creatuserinfo'>
                 <label for="firstname">First Name</label>
-                <input type="text" id="firstname" name="firstname" size="44"><br><br>
+                <input type="text" id="firstname" name="firstname"><br><br>
                 <label for="lastname">Last Name</label>
-                <input type="text" id="lastname" name="lastname" size="44"><br><br>
+                <input type="text" id="lastname" name="lastname"><br><br>
                 <label for="department">Department</label>
-                <select name = 'department' id='department' style="width: 307px;">
+                <select name = 'department' id='department'>
                     <option value ='none'>--None--</option>
                     <option value ='cs'>CS</option>
                     <option value ='mse'>MSE</option>
