paly with js to write html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <div id="content">
         <header>
-            <p calss = 'userlabel'>Users<p>
+            <p class = 'userlabel'>Users<p>
         </header>
         <div id ='creatuser'>
             <p class = 'creatlabel'> Creat A User</p>
